vf_infra/modules/network/main.tf
resource "google_compute_network" "vpc" {
  name                    = var.network_name
  auto_create_subnetworks = false
}

resource "google_compute_subnetwork" "subnet" {
  name          = "${var.network_name}-subnet"
  ip_cidr_range = "10.0.1.0/24"
  region        = var.region
  network       = google_compute_network.vpc.id
}

# Firewall: дозволяємо трафік від Load Balancer до наших VM
resource "google_compute_firewall" "allow_lb" {
  name    = "allow-health-check"
  network = google_compute_network.vpc.name

  allow {
    protocol = "tcp"
    ports    = ["80", "8080"]
  }

  source_ranges = ["130.211.0.0/22", "35.191.0.0/16"] # Діапазони Google LB
  target_tags   = ["vectasafe-backend"]
}

resource "google_compute_firewall" "allow_iap_ssh" {
  name    = "allow-iap-ssh"
  network = google_compute_network.vpc.name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  # Цей діапазон є статичним для сервісу Google IAP
  source_ranges = ["35.235.240.0/20"]
  
  # Застосовуємо тільки до наших бекенд-серверів
  target_tags   = ["vectasafe-backend"]
}
